--- a/Real-Time Screen Monitor/templates/login.html
+++ b/Real-Time Screen Monitor/templates/login.html
@@ -33,7 +33,8 @@
             color: #444;
         }
 
-        input[type="text"] {
+        input[type="text"],
+        input[type="password"] {
             width: calc(100% - 20px);
             padding: 10px;
             margin: 10px 0;
@@ -65,6 +66,8 @@
         <form action="{{ url_for('login') }}" method="POST">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
             <button type="submit">Login</button>
         </form>
     </div>
