--- a/Real-Time Screen Monitor/templates/monitor.html
+++ b/Real-Time Screen Monitor/templates/monitor.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Monitor</title>
-    <script src="https://cdn.socket.io/socket.io-4.0.0.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var socket = io.connect(location.protocol + '//' + location.host);
-            socket.on('server_response', function(data) {
-                console.log('Received:', data.data);
-            });
-        });
-    </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.0/socket.io.js"></script>
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    var socket = io.connect(window.location.protocol + '//' + window.location.host);
+    socket.on('server_response', function(data) {
+        console.log('Received:', data.data);
+    });
+});
+</script>
+
 </head>
 <body>
     <h1>Welcome, {{ username }}</h1>
