--- a/Real-Time Screen Monitor/templates/index.html
+++ b/Real-Time Screen Monitor/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebSocket Test</title>
     <!-- Load the socket.io client script from a CDN -->
-    <script src="https://cdn.socket.io/4.0.0/socket.io.min.js" integrity="sha384-13RH9WyTIcbq9vT0955ErTyWj4lDz5ZNuQ0PfjONfZUgQnPhC4E6H6jKNuL1OxHg" crossorigin="anonymous"></script>
+    <script src="https://cdn.socket.io/4.0.0/socket.io.min.js" crossorigin="anonymous"></script>
     <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', function () {
             // Check if the socket.io library loaded correctly
